# sdk-rust

./: .svu.yml  Cargo.toml  README.md  make_release  mise.toml
.github/workflows/: autorelease.yml
examples/: get.rs
src/: lib.rs
tests/: integration.rs  sfv_and_server.rs
