[package]
name = "fetchurl-sdk"
version = "0.2.3"
edition = "2024"
description = "Protocol-level client SDK for fetchurl content-addressable cache servers"
license = "MIT"
authors = ["lucasew"]
repository = "https://github.com/fetchurl/sdk-rust"
homepage = "https://crates.io/crates/fetchurl-sdk"
documentation = "https://docs.rs/fetchurl-sdk"
keywords = ["fetchurl", "cache", "content-addressable", "hash"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
digest = "0.10"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
thiserror = "2"

[dev-dependencies]
ureq = { version = "2", default-features = false }
clap = { version = "4", features = ["derive"] }
testcontainers = "0.15"

[[example]]
name = "get"
